# FiuFit-Users

./: .flake8  Dockerfile  Dockerfile.dev  LICENSE  README.md  alembic.ini  docker-compose-dep.yml  docker-compose-testing.yml  docker-compose.yml  init_database.sql  insert_tt.sql  okteto.yaml  okteto.yml  pyproject.toml  test.db
.github/workflows/: ci.yml  dockerhub.yml  migrations.yml  release.yml
app/: config.py  db.py  main.py
app/api/: admin.py  dependencies.py  interests.py  ping.py  training_types.py  users.py
app/api/admins/: crud.py  models.py  routes.py  schemas.py
app/api/certificates/: crud.py  models.py  routes.py  schemas.py  service.py
app/api/training_types/: crud.py  models.py  routes.py  schemas.py
app/api/users/: crud.py  models.py  routes.py  schemas.py  services.py  utils.py
app/config/: config.py  database.py
app/sql_app/: crud.py  database.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: d371a25b6812_historia_de_certificates.py
tests/: conftest.py  test_app.py  test_integration.py  test_sample.py
tests/api/: test_admins.py  test_certificates.py  test_training_types.py  test_users.py  test_xcertificates.py
tests/api/integration_tests/: test_admins.py  test_users.py
tests/api/unit_tests/: test_users_service.py
