[tool.poetry]
name = "Users"
version = "0.1.0"
description = "This services handles user registration and login"
authors = ["Juan Aguirre <jaguirreb@fi.uba.ar>","Axel Kelman <akelman@fi.uba.ar>","Franco Gazzola <fgazzola@fi.uba.ar>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
pydantic = "^1.10.7"
asyncpg = "^0.27.0"
databases = {extras = ["asyncpg"], version = "^0.7.0"}
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
flake8 = "^6.0.0"
black = "^23.1.0"
pytest-cov = "^4.0.0"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
